# collectigent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
config/: model_config.yaml
data/contracts/: 股权转让协议-可之_v4.docx
examples/: demo_contract_review.py  demo_debugger.py  demo_large_file_processing.py  demo_swarm.py  quick_test.py
src/collectigent/: __init__.py
src/collectigent/core/: __init__.py
src/collectigent/core/agents/: __init__.py  base.py  critic.py  executor.py  innovator.py  leader.py  researcher.py  synthesizer.py
src/collectigent/core/config/: __init__.py  config_loader.py
src/collectigent/core/debugger/: __init__.py  cli.py  dashboard.py  flow.py
src/collectigent/core/engine/: __init__.py
src/collectigent/core/knowledge/: __init__.py  chunking.py  cross_file_synthesis.py  embedding.py  file_processing.py  incremental_update.py  ingestion.py  loader.py  rag.py  retriever.py  splitter.py  vector_store.py
src/collectigent/core/llm/: __init__.py  anthropic.py  base.py  deepseek.py  doubao.py  factory.py  glm.py  kimi.py  minimax.py  openai.py  qwen.py
src/collectigent/core/memory/: __init__.py  shared_memory.py
src/collectigent/core/metrics/: __init__.py
src/collectigent/core/orchestrator/: __init__.py  orchestrator.py  role_model_config.py
tests/: test_collectigent.py  test_knowledge.py  test_llm.py
