[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collectigent"
version = "0.3.0"
description = "群体智能涌现引擎 - 可量化、可复现的群体智能开源框架"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Collectigent Team", email = "contact@collectigent.tech" }
]
keywords = [
    "collective-intelligence",
    "multi-agent",
    "emergence",
    "AI",
    "LLM",
    "swarm",
    "RAG",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "zhipuai>=2.0",
    "dashscope>=2.0",
]
knowledge = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "PyPDF2>=3.0",
    "python-docx>=0.8",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "chromadb>=0.4",
]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "zhipuai>=2.0",
    "volcengine-python>=1.0",
    "dashscope>=2.0",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "PyPDF2>=3.0",
    "python-docx>=0.8",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "chromadb>=0.4",
]

[project.urls]
Homepage = "https://collectigent.tech"
Documentation = "https://github.com/collectigent/collectigent#readme"
Repository = "https://github.com/collectigent/collectigent"
Issues = "https://github.com/collectigent/collectigent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/collectigent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true